--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -487,7 +487,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Reservas"
+                android:text="CONTACTENOS"
                 android:textSize="12sp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:textColor="@color/purple_500"
