--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,9 @@
     <color name="system_color">@color/black</color>
     <color name="payment_color">@color/green_700</color>
 
-    <!-- ⭐⭐ AGREGAR ESTE COLOR FALTANTE ⭐⭐ -->
+    <!-- ⭐⭐ COLORES EXISTENTES ⭐⭐ -->
     <color name="light_gray">#FFEEEEEE</color>
+
+    <!-- ⭐⭐ AGREGAR ESTE COLOR FALTANTE ⭐⭐ -->
+    <color name="gray_light">#FFF5F5F5</color>
 </resources>
