feat: App Belleza Express completa

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -25,7 +25,7 @@
             <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/logo_arquitech"
+                android:src="@drawable/logo_belleza"
                 android:contentDescription="@string/logo_arquitech" />
 
             <TextView
