--- a/app/src/main/res/drawable/dot_active.xml
+++ b/app/src/main/res/drawable/dot_active.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/purple_500" />
-    <size android:width="12dp" android:height="12dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/pink_primary" />
+    <size android:width="8dp" android:height="8dp" />
+    <corners android:radius="4dp" />
 </shape>
